Padding adjustment to fix overlap issue with footer at certain breakpoints.

--- a/web/sites/all/themes/gpii_base/css/gpii_base.css
+++ b/web/sites/all/themes/gpii_base/css/gpii_base.css
@@ -6975,7 +6975,7 @@ html {
     position: absolute;
     bottom: 0; }
   #push {
-    height: 22rem; } }
+    height: 27rem; } }
 
 .menu.nav > li > a {
   padding: 2px 0; }
